crates/ika-protocol-config/src/snapshots/ika_protocol_config__test__Mainnet_version_4.snap
---
source: crates/ika-protocol-config/src/lib.rs
expression: "ProtocolConfig::get_for_version(cur, *chain_id)"
---
version: 4
feature_flags:
  consensus_round_prober: true
  mysticeti_num_leaders_per_round: 1
  consensus_zstd_compression: true
  consensus_batched_block_sync: true
  enforce_checkpoint_timestamp_monotonicity: true
  internal_presign_sessions: true
max_messages_per_dwallet_checkpoint: 500
max_messages_per_system_checkpoint: 500
max_dwallet_checkpoint_size_bytes: 51200
max_system_checkpoint_size_bytes: 51200
buffer_stake_for_protocol_upgrade_bps: 5000
consensus_bad_nodes_stake_threshold: 30
idle_session_count_threshold: 10
consensus_max_transaction_size_bytes: 315218930
consensus_max_num_transactions_in_block: 512
consensus_max_transactions_in_block_bytes: 315218930
consensus_gc_depth: 60
decryption_key_reconfiguration_third_round_delay: 10
schnorr_presign_second_round_delay: 8
network_dkg_third_round_delay: 10
network_encryption_key_version: 2
reconfiguration_message_version: 2
checkpoint_signing_curve: Curve25519
checkpoint_signing_algorithm: EdDSA
checkpoint_signing_hash_scheme: Keccak256
checkpoint_presign_pool_minimum_size: 5000
checkpoint_presign_consensus_round_delay: 4
checkpoint_presign_sessions_to_instantiate: 4
internal_secp256k1_ecdsa_presign_pool_minimum_size: 2500
internal_secp256r1_ecdsa_presign_pool_minimum_size: 1000
internal_eddsa_presign_pool_minimum_size: 1000
internal_schnorrkel_substrate_presign_pool_minimum_size: 1000
internal_taproot_presign_pool_minimum_size: 1000
internal_secp256k1_ecdsa_presign_consensus_round_delay: 4
internal_secp256r1_ecdsa_presign_consensus_round_delay: 4
internal_eddsa_presign_consensus_round_delay: 8
internal_schnorrkel_substrate_presign_consensus_round_delay: 8
internal_taproot_presign_consensus_round_delay: 8
internal_secp256k1_ecdsa_presign_sessions_to_instantiate: 2
internal_secp256r1_ecdsa_presign_sessions_to_instantiate: 1
internal_eddsa_presign_sessions_to_instantiate: 1
internal_schnorrkel_substrate_presign_sessions_to_instantiate: 1
internal_taproot_presign_sessions_to_instantiate: 1
